--- a/byterun/Makefile
+++ b/byterun/Makefile
@@ -4,6 +4,7 @@ CC=$(BYTECC)
 CFLAGS=-O $(BYTECCCOMPOPTS)
 DFLAGS=-g -DDEBUG $(BYTECCCOMPOPTS)
 
+#coupling: if you add an object here, modify also asmrun/Makefile
 OBJS=interp.o misc.o stacks.o fix_code.o startup.o main.o \
   freelist.o major_gc.o minor_gc.o memory.o alloc.o roots.o \
   fail.o signals.o printexc.o backtrace.o \
@@ -13,6 +14,7 @@ OBJS=interp.o misc.o stacks.o fix_code.o startup.o main.o \
 
 DOBJS=$(OBJS:.o=.d.o) instrtrace.d.o
 
+# source containing the special /* ML */ string (CamlPrim in later ocaml)
 PRIMS=array.c compare.c extern.c floats.c gc_ctrl.c hash.c \
   intern.c interp.c ints.c io.c lexing.c md5.c meta.c obj.c parsing.c \
   signals.c str.c sys.c terminfo.c callback.c weak.c backtrace.c
