run make opt in nix workflow

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -37,5 +37,6 @@ jobs:
             ./configure
             make coldstart
             make world
-            make nix-test
+            make opt
+            #make nix-test
           '
