ugly hack to compile otherlibs/{str,unix} with -m32 too
the otherlibs/unix/libunix.a was compiled with BYTECC
but it can't then be linked with objects produced by ocamlopt
because of the missing -m32
=> recompile libunix also with -32 and add the opt suffix
(libunixopt.a) to differentiate.
That means the caller needs to use -cclib -lunixopt
but it's ok for now.

test plan:
can compile now xix with ocamlight opt!

--- a/otherlibs/str/Makefile
+++ b/otherlibs/str/Makefile
@@ -11,12 +11,22 @@ COBJS=strstubs.o
 
 all: libstr.a str.cmi str.cma
 
-allopt: libstr.a str.cmi str.cmxa
+#pad: see otherlibs/unix/Makefile for this libstropt.a hack
+allopt: libstr.a str.cmi str.cmxa libstropt.a
 
 libstr.a: $(COBJS)
 	rm -f libstr.a
 	ar rc libstr.a $(COBJS)
 	$(RANLIB) libstr.a
+
+OPTOBJS=$(COBJS:.o=.ox)
+libstropt.a: $(OPTOBJS)
+	rm -f libstropt.a
+	ar rc libstropt.a $(OPTOBJS)
+	$(RANLIB) libstropt.a
+.SUFFIXES: .ox
+.c.ox:
+	$(NATIVECC) -I../../byterun $(NATIVECCCOMPOPTS) -c $< -o $@
 
 str.cma: str.cmo
 	$(CAMLC) -a -o str.cma str.cmo
@@ -30,7 +40,7 @@ partialclean:
 	rm -f *.cm*
 
 clean: partialclean
-	rm -f *.a *.o
+	rm -f *.a *.o *.ox
 
 install:
 	cp libstr.a $(LIBDIR)/libstr.a
@@ -38,7 +48,7 @@ install:
 	cp str.cma str.cmi str.mli $(LIBDIR)
 
 installopt:
-	cp str.cmx str.cmxa str.a $(LIBDIR)
+	cp str.cmx str.cmxa str.a libstropt.a $(LIBDIR)
 	cd $(LIBDIR); $(RANLIB) str.a
 
 .SUFFIXES: .ml .mli .cmo .cmi .cmx
