fix workflow to work on new 'master' branch

--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -21,6 +21,6 @@ on:
   push:
     #TODO: Error: [ERROR]: Error: exception Git_wrapper.Git_error("Could not get files from git ls-files: exit 128; command: 'git' '-C' '/__w/ocaml-light/ocaml-light' 'ls-files' '-z' '--cached'")
     branches:
-      - mainXXX
+      - masterXXX
   #schedule:
   #  - cron: 50 15 * * *
