build dumpapprox via make opt

--- a/tools/dumper/Makefile
+++ b/tools/dumper/Makefile
@@ -10,7 +10,8 @@ COMPFLAGS=$(INCLUDES)
 LINKFLAGS=$(INCLUDES)
 
 all: dumpobj objinfo
-#dumpapprox
+
+opt: dumpapprox
 
 # The bytecode disassembler
 
