--- a/otherlibs/num/bignum/Makefile
+++ b/otherlibs/num/bignum/Makefile
@@ -11,7 +11,7 @@ RANLIBTEST=test -f /usr/bin/ranlib -o -f /bin/ranlib
 LIB = libbignum.a
 OBJECT = o/KerN.o o/bnInit.o o/bnMult.o o/bnDivide.o o/bnCmp.o o/bzf.o o/bz.o 
 KERNH = h/BigNum.h 
-CFLAGS = -c -I./h -O -DCAML_LIGHT
+CFLAGS = -c -I./h -O -DCAML_LIGHT --std=gnu89
 LDFLAGS =
 
 # extra entries:
