--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # optional if don't need multi-arch build
-      - uses: docker/setup-buildx-action@v3
-      # alt: make build-docker
-      - run: docker build -t ocaml-light .
+      - run: docker build --tag ocaml-light --target bytecode .
+      - run: docker build --tag ocaml-light-opt --target native .
