--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: docker build --tag ocaml-light --target bytecode .
-      - run: docker build --tag ocaml-light-opt --target native .
+      - run: docker build --tag ocaml-light-opt --target native-x86_64 .
