--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -11,6 +11,15 @@ jobs:
     # run: semgrep ci
     steps:
       - uses: actions/checkout@v3
+      # Workaround for rootless containers as git operations may fail due to
+      # dubious ownership of /__w/ocaml-light
+      # ugly: needed because osemgrep doesn't do the git hack in pysemgrep
+      - run: |
+          git --version
+          pwd
+          ls
+          git config --global --add safe.directory /__w/ocaml-light/ocaml-light
+          git -C /__w/ocaml-light/ocaml-light ls-files -z --cached
       # coupling: with Makefile 'make check' target
       - run: semgrep scan --experimental --config semgrep.jsonnet --strict --error
 
