--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,3 +16,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: docker build --tag ocaml-light --target bytecode .
       - run: docker build --tag ocaml-light-opt --target native-x86_64 .
+      - run: make build-docker-plan9
