--- a/Dockerfile.plan9
+++ b/Dockerfile.plan9
@@ -1,4 +1,5 @@
-# Cross-compile 'ocamlrun' for plan9 using principia-softwarica libc
+# Cross-compile 'ocamlrun' for plan9 using goken and principia-softwarica APE
+# libs.
 
 FROM padator/goken
 
@@ -15,16 +16,19 @@ RUN mk && mk install
 RUN apt-get install -y make sed
 
 # Let's go!
-WORKDIR /src
+WORKDIR /work
 COPY . .
 
 #TODO:
 #RUN ./configure -plan9
 RUN ./configure
-RUN cd byterun; make primitives; make prims.c
+RUN cd byterun && make primitives && make prims.c
+
 # overwrite for plan9
 RUN cp config/plan9.h config/s.h
-RUN cd byterun; mk
+RUN cd byterun && mk
+RUN cd otherlibs/unix && mk
+RUN cd otherlibs/threads && mk
 
 #TODO: compile ocaml itself, to get ocaml/ocamlc binary and
 # try ocamlrun then on qemu via test_qemu.rc
