plan9: remove goken sed

--- a/Dockerfile.plan9
+++ b/Dockerfile.plan9
@@ -13,7 +13,10 @@ RUN cp mkconfig.pc mkconfig
 RUN mk && mk install
 # install sed to override the one in goken that seems not
 # good enough for 'make primitives' below
+RUN rm -f `which sed`
 RUN apt-get install -y make sed
+RUN which sed
+
 
 # Let's go!
 WORKDIR /src
